@@ -1,32 +1,40 @@
 package com.endava.recipebox.service.impl;
 
 
-import com.endava.recipebox.model.MealType;
-import com.endava.recipebox.model.Recipe;
-import com.endava.recipebox.model.RecipeStatus;
-import com.endava.recipebox.repository.RecipeRepository;
+import com.endava.recipebox.dto.RecipeAddRequestDTO;
+import com.endava.recipebox.exceptions.UnauthorizedActionException;
+import com.endava.recipebox.model.*;
+import com.endava.recipebox.repository.*;
 import com.endava.recipebox.dto.RecipeDTO;
 import com.endava.recipebox.mapper.RecipeMapper;
 import com.endava.recipebox.service.RecipeService;
+import jakarta.persistence.EntityNotFoundException;
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class RecipeServiceImpl implements RecipeService {
 
     private final RecipeRepository recipeRepository;
+    private final UserRepository userRepository;
+    private final IngredientRepository ingredientRepository;
+    private final RecipeIngredientRepository recipeIngredientRepository;
     private final RecipeMapper recipeMapper;
 
 
     @Autowired
-    public RecipeServiceImpl(RecipeRepository recipeRepository, RecipeMapper recipeMapper) {
+    public RecipeServiceImpl(RecipeRepository recipeRepository, RecipeMapper recipeMapper, UserRepository userRepository,
+                             RecipeIngredientRepository recipeIngredientRepository, IngredientRepository ingredientRepository) {
         this.recipeRepository = recipeRepository;
         this.recipeMapper = recipeMapper;
+        this.userRepository = userRepository;
+        this.recipeIngredientRepository = recipeIngredientRepository;
+        this.ingredientRepository = ingredientRepository;
     }
 
     public static boolean isPublic(Recipe recipe) {
@@ -37,7 +45,7 @@ public class RecipeServiceImpl implements RecipeService {
     public List<RecipeDTO> getAllPublicRecipes() {
         return recipeMapper.map(recipeRepository.findAll().stream()
                 .filter(RecipeServiceImpl::isPublic)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @Override
@@ -45,7 +53,7 @@ public class RecipeServiceImpl implements RecipeService {
         return  recipeMapper.map(recipeRepository.findAll().stream()
                 .filter(RecipeServiceImpl::isPublic)
                 .filter(r -> r.getName().equals(recipeName))
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @Override
@@ -53,6 +61,41 @@ public class RecipeServiceImpl implements RecipeService {
         return recipeMapper.map(recipeRepository.findAll().stream()
                 .filter(RecipeServiceImpl::isPublic)
                 .filter(r -> r.getMealType() == mealType)
-                .collect(Collectors.toList()));
+                .toList());
+    }
+
+    @Override
+    @Transactional
+    public String createRecipe(RecipeAddRequestDTO recipeAddRequestDTO, Long userId) {
+
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new EntityNotFoundException("User not found"));
+        if (user.getRole() != Role.Admin )
+            throw new UnauthorizedActionException("Only admins can create recipes");
+
+        Recipe recipe = recipeMapper.toEntity(recipeAddRequestDTO);
+
+        recipe.setUser(user);
+
+        Recipe savedRecipe = recipeRepository.save(recipe);
+
+        List<RecipeIngredient> recipeIngredients = recipeAddRequestDTO.getIngredients().stream()
+                .map(ingredientDTO -> {
+                    RecipeIngredient recipeIngredient = new RecipeIngredient();
+                    recipeIngredient.setRecipe(savedRecipe);
+
+                    Ingredient ingredient = ingredientRepository.findById(ingredientDTO.getIngredientId())
+                            .orElseThrow(() -> new EntityNotFoundException("No ingredient found in the DB."));
+
+                    recipeIngredient.setIngredient(ingredient);
+                    recipeIngredient.setQuantity(ingredientDTO.getQuantity());
+                    recipeIngredient.setUnit(ingredient.getUnit());
+                    return recipeIngredient;
+                })
+                .toList();
+
+        recipeIngredientRepository.saveAll(recipeIngredients);
+
+        return "Recipe added successfully";
     }
 }
